--- a/one-to-many.html
+++ b/one-to-many.html
@@ -19,7 +19,8 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/prism.css">
   <link rel="stylesheet" href="css/main.css">
 
   <!-- Favicon
@@ -33,14 +34,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="twelve columns">
-        <h4>One-to-Many</h4>
+      <div class="col-md-12">
+        <h2>One-to-Many</h2>
       </div>
     </div>
     <div class="row">
-      <div class="six columns">
-        <h5>Project</h5>
+      <div class="col-md-6">
+        <h3>Project</h3>
         <pre>
+          <code class="language-csharp">
     public class Project
     {
         public Project()
@@ -50,11 +52,13 @@
 
         public virtual ICollection<Ticket> Tickets { get; set; }
     }
+          </code>
         </pre>
       </div>
-      <div class="six columns">
-        <h5>Ticket</h5>
+      <div class="col-md-6">
+        <h3>Ticket</h3>
         <pre>
+          <code class="language-csharp">
     public class Ticket
     {
 
@@ -63,26 +67,34 @@
       public virtual Project Project { get; set; }
 
     }
+          </code>
         </pre>
       </div>
     </div>
     <div class="row">
-      <div class="twelve columns">
-        <h5>The Database Relationship</h5>
+      <div class="col-md-12">
+        <h3>The Database Relationship</h3>
         <p>In our database, each entry in our Tickets table has a <strong>Foreign Key</strong> that points to the <strong>Primary Key</strong> in our Projects table.</p>
 
-        <h5>The Object Relationship</h5>
+        <h3>The Object Relationship</h3>
         <p>We can call a list of all the tickets that belong to a specific project:</p>
-        <pre>
+          <pre>
+          <code class="language-csharp">
           var project = db.Projects.Find(7);
           var tickets = project.Tickets.ToList();
-        </pre>
-        <p>We can also call an object that will represent the project that a ticket belongs to:</p>
+          </pre>
+          </code>
+        <p>We can also call an object that will represent the project that a ticket belongs to:</p>    
         <pre>
-          var ticket = db.Tickets.Find(12);
-          var project = ticket.Project;
+        <code class="language-csharp">
+        var ticket = db.Tickets.Find(12);
+        var project = ticket.Project;
+        </code>
         </pre>
-
+      </div>
+      <div class="col-md-12">
+      <a href="index.html">Back to the fun page</a>
+      <br><br>
       </div>
     </div>
   </div>
@@ -90,5 +102,6 @@
   <!-- Javascript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="javascript/prism.js"></script>
 </body>
 </html>
